--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 
 <div id="container">
-    <img src="./wangui-images/1.png" alt="This is an image about me" height="550px; width:450px">
+    <img src="./wanguis-portfolio/wangui-images/1.png" alt="This is an image about me" height="550px; width:450px">
  <div id="text">
     <h1>This is me</h1>
 
@@ -68,13 +68,13 @@
       <h1 class="mb-4 text-center">Educational Background</h1>
       <div class="work text-black mt-5 mb-5">
           <div class="row">
-              <div class="center ">  
-               <h2 class="text-center"  style="color:#800080"">Educational background</h2>
+              <div class="text-centre ">  
+               <!-- <h2 class="text-center"  style="color:#800080"">Educational background</h2> -->
 
 
-       <h4 class="text-center"><b class="text-center">2023-present</b  class="text-centre"> :St. Pauls University (Business and information technology)</h4 >
-       <h4 class="text-center"><b class="text-centre">2022-2022 </b>:Kibo School (python programming)</h4>
-       <h4 class="text-center"><b class="text-center">2022-2022</b class="text-centre"> :Moringa School (certificate in fullstack develpment)</h4>
+       <h4 class="text-center"><b class="text-center">2023-present</b  class="text-centre"> :St. Pauls University</h4 >
+       <h4 class="text-center"><b class="text-centre">2022-2022 </b class= "text-centre">:Kibo School </h4>
+       <h4 class="text-center"><b class="text-center">2022-2022</b class="text-centre"> :Moringa School</h4>
 </div>
   </div>
 
@@ -110,11 +110,11 @@
 </p>
 
 <ol>
-  <!-- <li><a href="https://twitter.com/CharmainNaomi"><i class="fa fa-twitter"></i></a></li>
+  <li><a href="https://twitter.com/AnnWang20281562"><i class="fa fa-twitter"></i></a></li>
   <li><a href="https://www.youtube.com/channel/UCYaCT7GdUeXf79hd6H3PNJg"><i class="fa fa-youtube"></i></a></li>
-  <li><a href="linkedin.com/in/ann-wangui-30106b235/"><i class="fa fa-linkedin"></i></a></li>
+  <li><a href="https://www.linkedin.com/in/ann-wangui-30106b235/"><i class="fa fa-linkedin"></i></a></li>
   <li><a href="https://www.instagram.com/just_wanyoike/"><i class="fa fa-instagram"></i></a></li>
-</ol> -->
+</ol>
 
 
 <p class="close">This website uses cookies to ensure you get the best experience on my website. Read my Cookie Policy to learn more.
