--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </div>
 
 <div id="container">
-    <img src="./wanguis-portfolio/wangui-images/1.png" alt="This is an image about me" height="550px; width:450px">
+    <img src="1.jpg" alt="This is an image about me" height="550px; width:450px">
  <div id="text">
     <h1>This is me</h1>
 
